fix: scrollbar visibility in light mode

--- a/hybrid-crs-ui/src/app/globals.css
+++ b/hybrid-crs-ui/src/app/globals.css
@@ -36,8 +36,8 @@
   --accent-foreground: oklch(23.7% 0.0295 231.59);
   --destructive: oklch(63.68% 0.2078 25.33);
   --destructive-foreground: oklch(98.38% 0.0035 247.86);
-  --border: oklch(0.929 0.013 255.508);
-  --input: oklch(0.929 0.013 255.508);
+  --border: oklch(0.91 0.013 255.508);
+  --input: oklch(0.91 0.013 255.508);
   --ring: oklch(0.869 0.022 252.894);
   --chart-1: oklch(67.72% 0.1571 35.19);
   --chart-2: oklch(63.09% 0.1013 183.49);
